--- a/test_manager.html
+++ b/test_manager.html
@@ -181,7 +181,7 @@
                                     <ul class="nav nav-tabs">
                                         <li class="active"><a href="#demo-tabs-box-1" data-toggle="tab">考评启动</a></li>
                                         <li><a href="#demo-tabs-box-3" data-toggle="tab">打分系统</a></li>
-                                        <li><a href="#demo-tabs-box-4" data-toggle="tab">考评汇总</a></li>
+                                        <li><a href="#demo-tabs-box-4" data-toggle="tab" id="title">考评汇总</a></li>
                                     </ul>
                                 </div>
                                 <h3 class="panel-title">Panel With tabs</h3>
@@ -217,108 +217,17 @@
 
 
                                             <div class="modal-body ">
-                                                <table class="table table-striped table-bordered table-hover no-margin-bottom no-border-top">
-
-                                                    <form id="form_table"></form>
-                                                    <tbody>
-                                                    <tr>
-                                                        <td class="align-right">年度：</td>
-                                                        <td>
-                                                            <select class="form-control " name="year"
-                                                                    id="form-field-select-1">
-                                                                <option value="2018">2018</option>
-                                                                <option value="2017">2017</option>
-                                                                <option value="2016">2016</option>
-                                                            </select>
-                                                        </td>
-                                                    </tr>
-
-
-                                                    <tr>
-                                                        <td class="align-right">考评对象：</td>
-                                                        <td>
-                                                            <div class="radio">
-                                                                <label>
-                                                                    <input name="testObject" class="ace" value="首席专家"
-                                                                           id="id-disable-check1" autocomplete="off"
-                                                                           type="radio">
-                                                                    <span class="lbl">首席专家</span>
-                                                                </label>
-                                                            </div>
-                                                            <div class="radio">
-                                                                <label>
-                                                                    <input name="testObject" class="ace" value="副首席专家"
-                                                                           id="id-disable-check2" autocomplete="off"
-                                                                           type="radio">
-                                                                    <span class="lbl">副首席专家</span>
-                                                                </label>
-                                                            </div>
-                                                            <div class="radio">
-                                                                <label>
-                                                                    <input name="testObject" class="ace"
-                                                                           value="岗位专家和综合试验站站长" id="id-disable-check3"
-                                                                           autocomplete="off" type="radio">
-                                                                    <span class="lbl">岗位专家和综合试验站站长</span>
-                                                                </label>
-                                                            </div>
-
-                                                        </td>
-                                                    </tr>
-
-                                                    <tr>
-                                                        <td class="align-right ">省体系办：</td>
-                                                        <td><input placeholder="" id="form-1" name="nongWei"
-                                                                   class="col-xs-10 col-sm-8" autocomplete="off"
-                                                                   disabled="disabled" type="number">％
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-
-                                                        <td class="align-right">行业主管部门：</td>
-                                                        <td>
-                                                            <input id="form-2" name="expert" value="" placeholder=""
-                                                                   class="col-xs-10 col-sm-8" autocomplete="off"
-                                                                   disabled="disabled" type="number">％
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td class="align-right">副首席专家、岗位专家和综合试验站站长：</td>
-                                                        <td><input id="form-3" placeholder="" name="subChief_sta_lib"
-                                                                   class="col-xs-10 col-sm-8" autocomplete="off"
-                                                                   disabled="disabled" type="number">％
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td class="align-right">岗位专家和综合试验站站长：</td>
-                                                        <td><input placeholder="" id="form-4" name="sta_lib"
-                                                                   class="col-xs-10 col-sm-8" autocomplete="off"
-                                                                   type="number">％
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td class="align-right">首席专家：</td>
-                                                        <td><input placeholder="" id="form-5" name="chief"
-                                                                   class="col-xs-10 col-sm-8" autocomplete="off"
-                                                                   disabled="disabled" type="number">％
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td class="align-right">省体系办和行业主管部门：</td>
-                                                        <td><input placeholder="" id="form-6" name="nongwei_expert"
-                                                                   class="col-xs-10 col-sm-8" autocomplete="off"
-                                                                   disabled="disabled" type="number">％
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td class="align-right">首席专家和副首席专家：</td>
-                                                        <td><input placeholder="" id="form-7" name="chief_subChief"
-                                                                   class="col-xs-10 col-sm-8" autocomplete="off"
-                                                                   type="number">％
-                                                        </td>
-                                                    </tr>
-
-                                                    </tbody>
-
+                                                <table id="testScore" class="demo-add-niftycheck"
+                                                       data-toggle="table"
+                                                       data-search="true"
+                                                       data-show-refresh="true"
+                                                       data-show-toggle="true"
+                                                       data-show-columns="true"
+                                                       data-sort-name="id"
+                                                       data-page-list="[5, 10, 20]"
+                                                       data-page-size="5"
+                                                       data-pagination="true"
+                                                       data-show-pagination-switch="true">
                                                 </table>
                                             </div>
 
@@ -328,49 +237,9 @@
                                     </div>
                                     <div class="tab-pane fade" id="demo-tabs-box-4">
 
+                                        <table id="testManage_system" class="demo-add-niftycheck"></table>
 
-                                        <table id="demo-custom-toolbar3" class="demo-add-niftycheck" data-toggle="table"
-                                               data-toolbar="#zdhd"
-                                               data-search="true"
-                                               data-show-refresh="true"
-                                               data-show-toggle="true"
-                                               data-show-columns="true"
-                                               data-sort-name="id"
-                                               data-page-list="[5, 10, 20]"
-                                               data-page-size="5"
-                                               data-pagination="true" data-show-pagination-switch="true">
-                                            <thead>
-                                            <tr>
-                                                <th data-field="state" data-checkbox="true">ID</th>
-                                                <th data-field="id" data-sortable="true" data-align="center"
-                                                    data-formatter="invoiceFormatter">年度
-                                                </th>
-                                                <th data-field="name" data-sortable="true" data-align="center">所属体系</th>
-                                                <th data-field="date" data-sortable="true" data-align="center">被评分人</th>
-                                                <th data-field="status" data-align="center" data-sortable="true">职位</th>
-                                                <th data-field="name" data-sortable="true" data-align="center">分数</th>
-                                                <th data-field="date" data-sortable="true" data-align="center">评级</th>
-                                                <th data-field="status" data-align="center" data-sortable="true">操作</th>
-                                            </tr>
-                                            </thead>
-
-                                            <tbody>
-                                            <tr>
-                                                <td></td>
-                                                <td><a href="notice_detail.html">安徽</a></td>
-                                                <td>13</td>
-                                                <td>11</td>
-                                                <td>22</td>
-                                            </tr>
-                                            <tr>
-                                                <td></td>
-                                                <td>23</td>
-                                                <td>13</td>
-                                                <td>11</td>
-                                                <td>22</td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
+                                        <table id="testManage_person" class="demo-add-niftycheck"></table>
 
 
                                     </div>
@@ -410,6 +279,32 @@
         </div>
         <!--===================================================-->
         <!--End Small Bootstrap Modal-->
+
+        <!--Large Bootstrap Modal-->
+        <!--===================================================-->
+        <div id="score" class="modal fade" tabindex="-1">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><i class="pci-cross pci-circle"></i>
+                        </button>
+                        <h3 class="modal-title">打分</h3>
+                    </div>
+                    <div class="modal-body" style="text-align: center">
+                            <input type="hidden" name="score-id">
+                            <span id="a1"></span><br><input type="number" style="text-align: center" name="a1"><br>
+                            <span id="a2"></span><br><input type="number" style="text-align: center" name="a2"><br>
+                            <span id="a3"></span><br><input type="number" style="text-align: center" name="a3"><br>
+                            <span id="a4"></span><br><input type="number" style="text-align: center" name="a4"><br>
+                            <span id="a5"></span><br><input type="number" style="text-align: center" name="a5"><br>
+                            <span id="a6"></span><br><input type="number" style="text-align: center" name="a6"><br><br>
+                            <button id="score-btn" class="btn-success" >提交</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--===================================================-->
+        <!--End Large Bootstrap Modal-->
 
         <!--Large Bootstrap Modal-->
         <!--===================================================-->
@@ -538,10 +433,10 @@
                                     <label class="col-sm-3 control-label">
                                         参与考评人员
                                     </label>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-6"id="external_add ">
                                         <ul class="nav nav-tabs">
                                             <li class="active"><a href="#tabs-box-1" data-toggle="tab">本体系人员</a></li>
-                                            <li><a href="#tabs-box-2" data-toggle="tab">外聘专家</a></li>
+                                            <li ><a href="#tabs-box-2" data-toggle="tab">外聘专家</a></li>
                                         </ul>
 
                                         <div class="tab-content">
@@ -752,7 +647,7 @@
                                     </a>
                                 </li>
                                 <!--Menu list item-->
-                                <li style="display: none" id="test">
+                                <li>
                                     <a href="test_manager.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
